<resources>
    <string name="app_name">KotaTime</string>
    <string name="action_signout">Log Out</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="order_message">Your Order has been successfully created. You will recieve an app notification once your order has been completed</string>
    <string name="btnOk">OK</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_sign_in_text">SignIn</string>
    <string name="facebook_app_id">425264711185095</string>

    <string name="login_error_message">Incorrect credentials!</string>
    <string name="invalid_email">Invalid</string>

    <!--<string name="signup_link">Don\'t have an account? <a href="http://10.0.3.2:8080/register.html">SignUp here</a></string>-->
    <string name="signup_link">Don\'t have an account? <a href="https://xenon-lantern-213109.appspot.com/register.html">SignUp here</a></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Navigation Drawer Strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_myProfile">My Profile</string>
    <string name="nav_order_history">ORDER HISTORY</string>
    <string name="nav_settings">Setting</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Logout</string>
    <string name="this_is_where_the_dscription_goes">This is where the dscription goes</string>
    <string name="temp_price">R00.00</string>
    <string name="title_activity_nav_items">NavItemsActivity</string>

    <string name="title_activity_menu">MAIN MENU</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_shops">FIND SHOP</string>
    <string name="serach_btn_title">SEARCH SHOPS</string>



</resources>
