<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.com.jtd.toodles.view.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/liteBrown">


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="172dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editEmail"
            android:layout_marginTop="230dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/btn_sign_in_text"
            android:layout_below="@+id/editPassword"
            android:layout_alignStart="@+id/facebook_login_button" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/btnSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/txtWarnign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editEmail"
            android:layout_alignStart="@+id/editEmail"
            android:layout_marginBottom="46dp"
            android:text=" "
            android:textColor="@color/warnign" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtWarnign"
            android:layout_alignStart="@+id/txtWarnign"
            android:text="@string/signup_link" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
